Updated Website- James

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 	<html lang="en">
 		<head>
-			<title> Aminal Productions </title>
+			<title> Into Kilmainham: A VR Story </title>
 			
 			<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 			
@@ -15,16 +15,13 @@
 			
 		</head>	
 		<body>
-			<video loop id="backgroundVideo" preload="auto">
-					<source src="assets/video/sizzlereel.mp4" type="video/mp4">
-					<source src="assets/video/sizzlereel.WebM" type="video/WebM">
-					<source src="assets/video/sizzlereel.ogg" type="video/ogg vorbis">
-
+			<video loop autoplay id="backgroundVideo" preload="auto">
+					<source src="assets/video/Corridor_Animation.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2" '>
 			</video>
 			
 			<div class="navbar navbar-inverse navbar-fixed-top">
 				<div class="container">
-					<a href="/" class ="navbar-brand"><img class="aminal-logo-top"src="assets/image/aminallogosmall.png" alt="Small Logo"/></a>
+					<a href="/" class ="navbar-brand"><img class="aminal-logo-top"src="assets/image/IntoKilmainham_logo.png" alt="Small Logo"/></a>
 					<button class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
@@ -41,7 +38,7 @@
 			
 			<div class="container">
 				<div class="jumbotron aminal-top-box">
-					<img src="" alt="Logo"/>
+					<img src="assets/image/IntoKilmainham_logo.png" alt="Logo"/>
 					
 				</div>
 			</div>
@@ -49,19 +46,20 @@
 			<div class="container aminal-content">
 	
 				<div class="row">
-					<div class="col-md-3 aminal-front-col-left">
-						<h3 class="text-center">Into Kilmainham: A VR Story</h3>
-						<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam pretium purus sed erat mattis, ut hendrerit orci euismod. Praesent ac feugiat odio. Vivamus eu facilisis justo. In hac habitasse platea dictumst. Aenean egestas, leo eget pulvinar ultrices, ipsum ex tempor ligula, at vulputate ante velit sit amet massa. Suspendisse sed porta tellus. Morbi aliquet id purus ac aliquet. Fusce vitae dui sit amet urna porttitor viverra. Ut aliquet velit tortor, at mollis mauris tristique vitae. Praesent vitae pretium nunc. Morbi non lobortis arcu. Ut cursus ac tellus ac rutrum. Praesent nec est sed neque rhoncus porttitor.
-
-Morbi posuere, augue a porttitor ullamcorper, magna mauris congue lacus, eget pharetra ex metus non ante. Maecenas scelerisque et massa sit amet commodo. Donec vitae lacus augue. Nam rhoncus volutpat sem sit amet vulputate. Curabitur egestas est pellentesque ultricies ultricies. Sed id interdum libero, sed porta quam. Donec facilisis nunc eu eros malesuada porta. Mauris id metus semper, dapibus nisi sed, fringilla turpis. Aliquam metus nulla, accumsan id molestie semper, ornare ac massa. Maecenas luctus ex et lorem volutpat suscipit.
-						</p>
-					</div>
-					<div class="col-md-1"></div>
+                <div class="col-md-1"></div>
 					<div class="col-md-4 aminal-front-col-mid">
 						<h3 class="text-center"><a href="https://www.facebook.com/bonsoirluna">Interactive Digital Media</a></h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam pretium purus sed erat mattis, ut hendrerit orci euismod. Praesent ac feugiat odio. Vivamus eu facilisis justo. In hac habitasse platea dictumst. Aenean egestas, leo eget pulvinar ultrices, ipsum ex tempor ligula, at vulputate ante velit sit amet massa. Suspendisse sed porta tellus. Morbi aliquet id purus ac aliquet. Fusce vitae dui sit amet urna porttitor viverra. Ut aliquet velit tortor, at mollis mauris tristique vitae. Praesent vitae pretium nunc. Morbi non lobortis arcu. Ut cursus ac tellus ac rutrum. Praesent nec est sed neque rhoncus porttitor.
 
 Morbi posuere, augue a porttitor ullamcorper, magna mauris congue lacus, eget pharetra ex metus non ante. Maecenas scelerisque et massa sit amet commodo. Donec vitae lacus augue. Nam rhoncus volutpat sem sit amet vulputate. Curabitur egestas est pellentesque ultricies ultricies. Sed id interdum libero, sed porta quam. Donec facilisis nunc eu eros malesuada porta. Mauris id metus semper, dapibus nisi sed, fringilla turpis. Aliquam metus nulla, accumsan id molestie semper, ornare ac massa. Maecenas luctus ex et lorem volutpat suscipit.
+						</p>
+					</div>
+					<div class="col-md-3 aminal-front-col-left">
+						<h3 class="text-center">Into Kilmainham: A VR Story</h3>
+						<p> The player controls an unnamed character who finds themselves drawn into Kilmainham jail one night, and must find a way to escape. Echoes of the past still linger in the jail, and the player 
+encounters the ghosts of various inmates and staff from the prison’s history. The player must listen to their stories and insights in order to solve puzzles and advance through the jail towards freedom. 
+
+The game will cover three broad areas of the prison’s history: its early days from 1790 to 1850, including the Great Famine; the experimental expansion of the prison in the Victorian era; and finally the prison’s political significance in the wake of the 1916 Rising. There is a puzzle for each section of the game, which is thematically linked to the relevant time period. The game will provide the player with various insights into the history of the jail, however it does not have an explicitly educational purpose; it is rather intended to be an immersive and entertaining experience, using cutting edge technology to give players a glimpse into the past.
 						</p>
 					</div>
 					<div class="col-md-1"></div>
@@ -76,31 +74,12 @@ Morbi posuere, augue a porttitor ullamcorper, magna mauris congue lacus, eget ph
 			
 			<div class="navbar navbar-inverse navbar-fixed-bottom">
 				<div class="container">
-					<p class="navbar-text pull-right aminal-bottom-text">Site and Contents &copy; 2015 Aminal Productions Ltd. </p>
+					<p class="navbar-text pull-right aminal-bottom-text">Site and Contents &copy; 2015 Into Kilmainham: A VR Story </p>
 				</div>
 			</div>
 		
 		
-		
-		
-		<script type="text/javascript">
-			window.onclick=function(){
-				var video = document.getElementById("backgroundVideo");
-				video.play();
-			}
-			window.onscroll =function(){
-				var video = document.getElementById("backgroundVideo");
-				video.play();
-			}
-			window.ontouchstart=function(){
-				var video = document.getElementById("backgroundVideo");
-				video.play();
-			}
-			
-			var video = document.getElementById("backgroundVideo");
-			video.play();
-		</script>
-		
+	
 		<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 		<script src="js/bootstrap.js"></script>
 		<body>
