--- a/personnel.html
+++ b/personnel.html
@@ -1,10 +1,10 @@
 <!DOCTYPE HTML>
 	<html lang="en">
 		<head>
-			<title> Aminal Productions:: personnel </title>
+			<title> Into Kilmainham: A VR Story: Personnel </title>
 			
-			<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-			
+             <link rel="shortcut icon" href="assets/image/IntoKilmainham_logo.png">
+					
 			<link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
 			<link href='https://fonts.googleapis.com/css?family=Exo+2:400italic' rel='stylesheet' type='text/css'>
 			<link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
@@ -16,7 +16,7 @@
 		<body>
 			<div class="navbar navbar-inverse navbar-fixed-top">
 				<div class="container">
-					<a href="/" class ="navbar-brand"><img class="aminal-logo-top"src="assets/image/aminallogosmall.png" alt="Aminal Productions Logo"/></a>
+					<a href="/" class ="navbar-brand"><img class="aminal-logo-top"src="assets/image/IntoKilmainham_logo.png" alt="Into Kilmainham VR Logo"/></a>
 					<button class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
@@ -26,6 +26,7 @@
 						<ul class = "nav navbar-nav navbar-right">
 							<li ><a href="index.html">home</a></li>
 							<li class="active"><a href="/personnel.html">personnel</a></li>
+                            <li><a href= "video_page.html">video </a></li>
 						</ul>
 					</div>
 				</div>
@@ -35,7 +36,6 @@
 					<h1 class="text-center"> 
 					Who We Are
 					</h1>
-					<p> ae;ofnaebrboirneg[oikare[oimoivmareoibmsrieuglkdjglsjfdgluuhprejvnaoiidmnviaijroivmerljnasierjgaerio.asvirb;pimasrgl
 				</div>
 			</div>
 			<div class="container aminal-content">
@@ -45,9 +45,7 @@
 						<br/>
 						<p> 
 						<img class="pull-left aminal-personnel-img" src="assets/image/personnel/alina.jpg">
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam pretium purus sed erat mattis, ut hendrerit orci euismod. Praesent ac feugiat odio. Vivamus eu facilisis justo. In hac habitasse platea dictumst. Aenean egestas, leo eget pulvinar ultrices, ipsum ex tempor ligula, at vulputate ante velit sit amet massa. Suspendisse sed porta tellus. Morbi aliquet id purus ac aliquet. Fusce vitae dui sit amet urna porttitor viverra. Ut aliquet velit tortor, at mollis mauris tristique vitae. Praesent vitae pretium nunc. Morbi non lobortis arcu. Ut cursus ac tellus ac rutrum. Praesent nec est sed neque rhoncus porttitor.
-
-Morbi posuere, augue a porttitor ullamcorper, magna mauris congue lacus, eget pharetra ex metus non ante. Maecenas scelerisque et massa sit amet commodo. Donec vitae lacus augue. Nam rhoncus volutpat sem sit amet vulputate. Curabitur egestas est pellentesque ultricies ultricies. Sed id interdum libero, sed porta quam. Donec facilisis nunc eu eros malesuada porta. Mauris id metus semper, dapibus nisi sed, fringilla turpis. Aliquam metus nulla, accumsan id molestie semper, ornare ac massa. Maecenas luctus ex et lorem volutpat suscipit.</p>
+						My name is Alina and I personally have an international background, both Russian and German; and career wise – film, journalistic and digital marketing experience. After living in Berlin, Kiev and Moscow I have chosen Dublin as my new home and M.Sc. Interactive Digital Media at Trinity College – as a new direction for my professional path. I am a passionate gamer and was delighted to become a project manager of our final study project, which happened to be a VR Google Cardboard game. I was lucky to work in a great team and what we have achieved is an ambitious but nonetheless a successful result. Thank you guys! </p>
 					</div>
 					<div class="col-md-6">
 						<h3 class="text-center">Conor</h3>
@@ -94,5 +92,5 @@ Morbi posuere, augue a porttitor ullamcorper, magna mauris congue lacus, eget ph
 			</div>
 			<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 			<script src="js/bootstrap.js"></script>
-		<body>
+		</body>
 	</html>
