--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 							<li class="active"><a href="/">home</a></li>
 							<li><a href="personnel.html">personnel</a></li>
                             <li><a href= "video_page.html">video </a></li>
+                            <li><a href= "contact.html">contact us </a></li>
 						</ul>
 					</div>
 				</div>
