--- a/personnel.html
+++ b/personnel.html
@@ -25,15 +25,16 @@
 					<div class ="collapse navbar-collapse navHeaderCollapse">
 						<ul class = "nav navbar-nav navbar-right">
 							<li ><a href="index.html">home</a></li>
-							<li class="active"><a href="/personnel.html">personnel</a></li>
+							<li class="active"><a href="/">personnel</a></li>
                             <li><a href= "video_page.html">video </a></li>
+                            <li><a href= "contact.html">contact us </a></li>
 						</ul>
 					</div>
 				</div>
 			</div>
 			<div class="container">
 				<div class="jumbotron aminal-top-box">
-					<h1 class="text-center"> 
+					<h1 class="text-top"> 
 					Who We Are
 					</h1>
 				</div>
@@ -52,37 +53,30 @@
 						<br/>
 						<p> 
 						<img class="pull-right aminal-personnel-img" src="assets/image/personnel/conor.jpg">
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam pretium purus sed erat mattis, ut hendrerit orci euismod. Praesent ac feugiat odio. Vivamus eu facilisis justo. In hac habitasse platea dictumst. Aenean egestas, leo eget pulvinar ultrices, ipsum ex tempor ligula, at vulputate ante velit sit amet massa. Suspendisse sed porta tellus. Morbi aliquet id purus ac aliquet. Fusce vitae dui sit amet urna porttitor viverra. Ut aliquet velit tortor, at mollis mauris tristique vitae. Praesent vitae pretium nunc. Morbi non lobortis arcu. Ut cursus ac tellus ac rutrum. Praesent nec est sed neque rhoncus porttitor.
-
-Morbi posuere, augue a porttitor ullamcorper, magna mauris congue lacus, eget pharetra ex metus non ante. Maecenas scelerisque et massa sit amet commodo. Donec vitae lacus augue. Nam rhoncus volutpat sem sit amet vulputate. Curabitur egestas est pellentesque ultricies ultricies. Sed id interdum libero, sed porta quam. Donec facilisis nunc eu eros malesuada porta. Mauris id metus semper, dapibus nisi sed, fringilla turpis. Aliquam metus nulla, accumsan id molestie semper, ornare ac massa. Maecenas luctus ex et lorem volutpat suscipit.</p><br/><br/><br/>
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam pretium purus sed erat mattis, ut hendrerit orci euismod. Praesent ac feugiat odio. Vivamus eu facilisis justo. In hac habitasse platea dictumst. Aenean egestas, leo eget pulvinar ultrices, ipsum ex tempor ligula, at vulputate ante velit sit amet massa. Suspendisse sed porta tellus. Morbi aliquet id purus ac aliquet. Fusce vitae dui sit amet urna porttitor viverra. Ut aliquet velit tortor, at mollis mauris tristique vitae. Praesent vitae pretium nunc. Morbi non lobortis arcu. Ut cursus ac tellus ac rutrum. Praesent nec est sed neque rhoncus porttitor.</p><br/><br/><br/>
 					</div>
 					<div class="col-md-6">
 						<h3 class="text-center">James</h3>
 						<br/>
 						<p> 
 						<img class="pull-left aminal-personnel-img" src="assets/image/personnel/james.jpg">
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam pretium purus sed erat mattis, ut hendrerit orci euismod. Praesent ac feugiat odio. Vivamus eu facilisis justo. In hac habitasse platea dictumst. Aenean egestas, leo eget pulvinar ultrices, ipsum ex tempor ligula, at vulputate ante velit sit amet massa. Suspendisse sed porta tellus. Morbi aliquet id purus ac aliquet. Fusce vitae dui sit amet urna porttitor viverra. Ut aliquet velit tortor, at mollis mauris tristique vitae. Praesent vitae pretium nunc. Morbi non lobortis arcu. Ut cursus ac tellus ac rutrum. Praesent nec est sed neque rhoncus porttitor.
-
-Morbi posuere, augue a porttitor ullamcorper, magna mauris congue lacus, eget pharetra ex metus non ante. Maecenas scelerisque et massa sit amet commodo. Donec vitae lacus augue. Nam rhoncus volutpat sem sit amet vulputate. Curabitur egestas est pellentesque ultricies ultricies. Sed id interdum libero, sed porta quam. Donec facilisis nunc eu eros malesuada porta. Mauris id metus semper, dapibus nisi sed, fringilla turpis. Aliquam metus nulla, accumsan id molestie semper, ornare ac massa. Maecenas luctus ex et lorem volutpat suscipit.</p>
+						I’m James, and I have a background in business and the arts. I previously studied English and worked in various roles in hotels for some time before pursuing a career in computing and interactive media, through the M.Sc. Interactive Digital Media course. I have always had a love for games or any form of visually engrossing media and focused my thesis on Google Cardboard and Google Glass. Luckily I was paired with a group of the finest individuals for this project who shared that passion and the end result is an immersive game which we loved creating. Hopefully you’ll find it reflects this and enjoy the experience.</p>
 					</div>
 					<div class="col-md-6">
 						<h3 class="text-center">Neil</h3>
 						<br/>
 						<p> 
 						<img class="pull-right aminal-personnel-img" src="assets/image/personnel/neil.jpg">
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam pretium purus sed erat mattis, ut hendrerit orci euismod. Praesent ac feugiat odio. Vivamus eu facilisis justo. In hac habitasse platea dictumst. Aenean egestas, leo eget pulvinar ultrices, ipsum ex tempor ligula, at vulputate ante velit sit amet massa. Suspendisse sed porta tellus. Morbi aliquet id purus ac aliquet. Fusce vitae dui sit amet urna porttitor viverra. Ut aliquet velit tortor, at mollis mauris tristique vitae. Praesent vitae pretium nunc. Morbi non lobortis arcu. Ut cursus ac tellus ac rutrum. Praesent nec est sed neque rhoncus porttitor.
-
-Morbi posuere, augue a porttitor ullamcorper, magna mauris congue lacus, eget pharetra ex metus non ante. Maecenas scelerisque et massa sit amet commodo. Donec vitae lacus augue. Nam rhoncus volutpat sem sit amet vulputate. Curabitur egestas est pellentesque ultricies ultricies. Sed id interdum libero, sed porta quam. Donec facilisis nunc eu eros malesuada porta. Mauris id metus semper, dapibus nisi sed, fringilla turpis. Aliquam metus nulla, accumsan id molestie semper, ornare ac massa. Maecenas luctus ex et lorem volutpat suscipit.</p><br/><br/><br/>
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam pretium purus sed erat mattis, ut hendrerit orci euismod. Praesent ac feugiat odio. Vivamus eu facilisis justo. In hac habitasse platea dictumst. Aenean egestas, leo eget pulvinar ultrices, ipsum ex tempor ligula, at vulputate ante velit sit amet massa. Suspendisse sed porta tellus. Morbi aliquet id purus ac aliquet. Fusce vitae dui sit amet urna porttitor viverra. Ut aliquet velit tortor, at mollis mauris tristique vitae. Praesent vitae pretium nunc. Morbi non lobortis arcu. Ut cursus ac tellus ac rutrum. Praesent nec est sed neque rhoncus porttitor.</p><br/><br/><br/>
 					</div>
 					<div class="col-md-6">
 						<h3 class="text-center">Phil</h3>
 						<br/>
-						<p> 
-						<img class="pull-left aminal-personnel-img" src="assets/image/personnel/phil.jpg">
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam pretium purus sed erat mattis, ut hendrerit orci euismod. Praesent ac feugiat odio. Vivamus eu facilisis justo. In hac habitasse platea dictumst. Aenean egestas, leo eget pulvinar ultrices, ipsum ex tempor ligula, at vulputate ante velit sit amet massa. Suspendisse sed porta tellus. Morbi aliquet id purus ac aliquet. Fusce vitae dui sit amet urna porttitor viverra. Ut aliquet velit tortor, at mollis mauris tristique vitae. Praesent vitae pretium nunc. Morbi non lobortis arcu. Ut cursus ac tellus ac rutrum. Praesent nec est sed neque rhoncus porttitor.
-
-Morbi posuere, augue a porttitor ullamcorper, magna mauris congue lacus, eget pharetra ex metus non ante. Maecenas scelerisque et massa sit amet commodo. Donec vitae lacus augue. Nam rhoncus volutpat sem sit amet vulputate. Curabitur egestas est pellentesque ultricies ultricies. Sed id interdum libero, sed porta quam. Donec facilisis nunc eu eros malesuada porta. Mauris id metus semper, dapibus nisi sed, fringilla turpis. Aliquam metus nulla, accumsan id molestie semper, ornare ac massa. Maecenas luctus ex et lorem volutpat suscipit.</p>
-					</div>					
+						<p class= "phil">
+                        <img class="pull-left aminal-personnel-img" src="assets/image/personnel/phil.jpg">
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam pretium purus sed erat mattis, ut hendrerit orci euismod. Praesent ac feugiat odio. Vivamus eu facilisis justo. In hac habitasse platea dictumst. Aenean egestas, leo eget pulvinar ultrices, ipsum ex tempor ligula, at vulputate ante velit sit amet massa. Suspendisse sed porta tellus. Morbi aliquet id purus ac aliquet. Fusce vitae dui sit amet urna porttitor viverra. Ut aliquet velit tortor, at mollis mauris tristique vitae. Praesent vitae pretium nunc. Morbi non lobortis arcu. Ut cursus ac tellus ac rutrum. Praesent nec est sed neque rhoncus porttitor.</p>
+					</div>
+                    </div>					
 				</div>			
 			</div>			
 			<div class="navbar navbar-inverse navbar-fixed-bottom">
