--- a/video_page.html
+++ b/video_page.html
@@ -29,6 +29,7 @@
 							<li><a href="index.html">home</a></li>
 							<li><a href="personnel.html">personnel</a></li>
                             <li class="active"><a href="/">video</a></li>
+                            <li><a href= "contact.html">contact us </a></li>
 						</ul>
 					</div>
 				</div>
