All finished bar Conor's piece

--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
 		<body>
 			<div class="navbar navbar-inverse navbar-fixed-top">
 				<div class="container">
-					<a href="/" class ="navbar-brand"><img class="aminal-logo-top"src="assets/image/IntoKilmainham_logo.png" alt="Into Kilmainham VR Logo"/></a>
+					<a href="index.html" class ="navbar-brand"><img class="aminal-logo-top" src="assets/image/IntoKilmainham_logo.png" alt="Into Kilmainham VR Logo"/></a>
 					<button class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
@@ -40,7 +40,7 @@
 							<li ><a href="index.html">home</a></li>
 							<li><a href="personnel.html">personnel</a></li>
                             <li><a href= "video_page.html">video </a></li>
-                            <li class="active"><a href="/">contact</a></li>
+                            <li class="active"><a href="contact.html">contact</a></li>
 						</ul>
 					</div>
 				</div>
@@ -58,20 +58,20 @@
 						<h3 class="text-center">Email</h3>
 						<br/>
 						<p> 
-						<img class="pull-left aminal-personnel-img" src="assets/image/email.png">
+						<img class="pull-left aminal-personnel-img" src="assets/image/email.png" alt= "Email">
 						Email us at:
                         </br></br>
-                        Alina:  </br>
-                       	Phil:  </br>
-                        Neil:  </br>
-                        Conor:  </br>
-                        James: </p>
+                        Alina: &nbsp &nbsp <a href="mailto:shumovaa@tcd.ie"> </a></br>
+                       	Phil: &nbsp &nbsp &nbsp pohici@tcd.ie</br>
+                        Neil: &nbsp &nbsp &nbsp ocarrone@tcd.ie</br>
+                        Conor: &nbsp &nbsp sneydc@tcd.ie</br>
+                        James: &nbsp &nbsp josulli9@tcd.ie</p>
 					</div>
 					<div class="col-md-6">
 						<h3 class="text-center">Location</h3>
 						<br/>
 						<p> 
-						<img class="pull-left aminal-personnel-img" src="assets/image/location.png">
+						<img class="pull-left aminal-personnel-img" src="assets/image/location.png" alt= "Location">
 						If you feel like dropping in, here's where you'll find us:</p>
                         <div id="googleMap" style="width:20vwpx;height:15vh;"></div>
 					</div>
@@ -79,25 +79,24 @@
 						<h3 class="text-center">Follow us</h3>
 						<br/>
 						<p> 
-						<img class="pull-left aminal-personnel-img" src="assets/image/Tumblr_Icon.png">
+						<img class="pull-left aminal-personnel-img" src="assets/image/Tumblr_Icon.png" alt= "Tumblr">
 						Follow us and see how we got here in our blog: <a href="https://www.tumblr.com/blog/amazingidm2team2015">Into Kilmainham: A VR Story</a></p>
 					</div>
                     <div class="col-md-6">
 						<h3 class="text-center">Check us out</h3>
 						<br/>
 						<p> 
-						<img class="pull-left aminal-personnel-img" src="assets/image/linkedin_icon.png">
+						<img class="pull-left aminal-personnel-img" src="assets/image/linkedin_icon.png" alt= "Linkedin">
 						Find out more about us via our Linkedin profiles:
                         </br></br>
-                        Alina:  </br>
-                       	Phil:  </br>
-                        Neil:  </br>
-                        Conor:  </br>
-                        James: </p>
+                        <a href= "https://ie.linkedin.com/in/alinaecke"> Alina</a>  </br>
+                       	<a href= "https://ie.linkedin.com/pub/philip-hickey/87/336/133"> Phil </a>  </br>
+                        <a href= "https://ie.linkedin.com/in/neilocarroll"> Neil </a> </br>
+                        <a href= "https://www.linkedin.com/pub/conor-sneyd/a5/b72/208"> Conor </a>  </br>
+                        <a href="https://ie.linkedin.com/in/jamesos"> James </a></p>
 					</div>
 					</div>					
 				</div>			
-			</div>			
 			<div class="navbar navbar-inverse navbar-fixed-bottom">
 				<div class="container">
 					<p class="navbar-text pull-right aminal-bottom-text">Site and Contents &copy; 2015 Aminal Productions Ltd. </p>
