--- a/personnel.html
+++ b/personnel.html
@@ -16,7 +16,7 @@
 		<body>
 			<div class="navbar navbar-inverse navbar-fixed-top">
 				<div class="container">
-					<a href="/" class ="navbar-brand"><img class="aminal-logo-top"src="assets/image/IntoKilmainham_logo.png" alt="Into Kilmainham VR Logo"/></a>
+					<a href="index.html" class ="navbar-brand"><img class="aminal-logo-top" src="assets/image/IntoKilmainham_logo.png" alt="Into Kilmainham VR Logo"/></a>
 					<button class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
@@ -25,7 +25,7 @@
 					<div class ="collapse navbar-collapse navHeaderCollapse">
 						<ul class = "nav navbar-nav navbar-right">
 							<li ><a href="index.html">home</a></li>
-							<li class="active"><a href="/">personnel</a></li>
+							<li class="active"><a href="personnel.html">personnel</a></li>
                             <li><a href= "video_page.html">video </a></li>
                             <li><a href= "contact.html">contact us </a></li>
 						</ul>
@@ -45,40 +45,39 @@
 						<h3 class="text-center">Alina</h3>
 						<br/>
 						<p> 
-						<img class="pull-left aminal-personnel-img" src="assets/image/personnel/alina.jpg">
+						<img class="pull-left aminal-personnel-img" src="assets/image/personnel/alina.jpg" alt= "Alina">
 						My name is Alina and I personally have an international background, both Russian and German; and career wise – film, journalistic and digital marketing experience. After living in Berlin, Kiev and Moscow I have chosen Dublin as my new home and M.Sc. Interactive Digital Media at Trinity College – as a new direction for my professional path. I am a passionate gamer and was delighted to become a project manager of our final study project, which happened to be a VR Google Cardboard game. I was lucky to work in a great team and what we have achieved is an ambitious but nonetheless a successful result. Thank you guys! </p>
 					</div>
 					<div class="col-md-6">
 						<h3 class="text-center">Conor</h3>
 						<br/>
 						<p> 
-						<img class="pull-right aminal-personnel-img" src="assets/image/personnel/conor.jpg">
+						<img class="pull-right aminal-personnel-img" src="assets/image/personnel/conor.jpg" alt= "Conor">
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam pretium purus sed erat mattis, ut hendrerit orci euismod. Praesent ac feugiat odio. Vivamus eu facilisis justo. In hac habitasse platea dictumst. Aenean egestas, leo eget pulvinar ultrices, ipsum ex tempor ligula, at vulputate ante velit sit amet massa. Suspendisse sed porta tellus. Morbi aliquet id purus ac aliquet. Fusce vitae dui sit amet urna porttitor viverra. Ut aliquet velit tortor, at mollis mauris tristique vitae. Praesent vitae pretium nunc. Morbi non lobortis arcu. Ut cursus ac tellus ac rutrum. Praesent nec est sed neque rhoncus porttitor.</p><br/><br/><br/>
 					</div>
 					<div class="col-md-6">
 						<h3 class="text-center">James</h3>
 						<br/>
 						<p> 
-						<img class="pull-left aminal-personnel-img" src="assets/image/personnel/james.jpg">
+						<img class="pull-left aminal-personnel-img" src="assets/image/personnel/james.jpg" alt= "James">
 						I’m James, and I have a background in business and the arts. I previously studied English and worked in various roles in hotels for some time before pursuing a career in computing and interactive media, through the M.Sc. Interactive Digital Media course. I have always had a love for games or any form of visually engrossing media and focused my thesis on Google Cardboard and Google Glass. Luckily I was paired with a group of the finest individuals for this project who shared that passion and the end result is an immersive game which we loved creating. Hopefully you’ll find it reflects this and enjoy the experience.</p>
 					</div>
 					<div class="col-md-6">
 						<h3 class="text-center">Neil</h3>
 						<br/>
 						<p> 
-						<img class="pull-right aminal-personnel-img" src="assets/image/personnel/neil.jpg">
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam pretium purus sed erat mattis, ut hendrerit orci euismod. Praesent ac feugiat odio. Vivamus eu facilisis justo. In hac habitasse platea dictumst. Aenean egestas, leo eget pulvinar ultrices, ipsum ex tempor ligula, at vulputate ante velit sit amet massa. Suspendisse sed porta tellus. Morbi aliquet id purus ac aliquet. Fusce vitae dui sit amet urna porttitor viverra. Ut aliquet velit tortor, at mollis mauris tristique vitae. Praesent vitae pretium nunc. Morbi non lobortis arcu. Ut cursus ac tellus ac rutrum. Praesent nec est sed neque rhoncus porttitor.</p><br/><br/><br/>
+						<img class="pull-right aminal-personnel-img" src="assets/image/personnel/neil.jpg" alt= "Neil">
+						I am an Interactive Digital Media student with a background in music, audio production and English literature. My role in the Into Kilmainham project has been audio designer and audio programmer. Our game uses a cutting-edge spatial audio API called 3Dception, which places and processes sounds in virtual space relative to the player’s head movements. I recorded a number of actors and produced appropriate sound effects and ambiences for each scene in the game. I then designed and wrote the C# scripts that load and trigger the audio assets sequentially as the player moves through the game world. My hope is that the 3D audio enhances the immersion of the virtual Kilmainham experience.</p><br/><br/><br/>
 					</div>
 					<div class="col-md-6">
 						<h3 class="text-center">Phil</h3>
 						<br/>
 						<p class= "phil">
-                        <img class="pull-left aminal-personnel-img" src="assets/image/personnel/phil.jpg">
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam pretium purus sed erat mattis, ut hendrerit orci euismod. Praesent ac feugiat odio. Vivamus eu facilisis justo. In hac habitasse platea dictumst. Aenean egestas, leo eget pulvinar ultrices, ipsum ex tempor ligula, at vulputate ante velit sit amet massa. Suspendisse sed porta tellus. Morbi aliquet id purus ac aliquet. Fusce vitae dui sit amet urna porttitor viverra. Ut aliquet velit tortor, at mollis mauris tristique vitae. Praesent vitae pretium nunc. Morbi non lobortis arcu. Ut cursus ac tellus ac rutrum. Praesent nec est sed neque rhoncus porttitor.</p>
+                        <img class="pull-left aminal-personnel-img" src="assets/image/personnel/phil.jpg" alt= "Phil">
+						I came to Interactive Digital Media because I really like making things, but lack the upper body strength for manual labour. I have backgrounds in film production and multimedia creation, so getting the chance to work on a game has been an incredible continuation into the forefront of digital entertainment. Programming and designing an immersive experience with a talented bunch of lads has been a rewarding and enriching experience. Exploring virtual reality has been particularly exciting for me, and is something I look forward to experimenting more with in the future.</p>
 					</div>
                     </div>					
-				</div>			
-			</div>			
+				</div>						
 			<div class="navbar navbar-inverse navbar-fixed-bottom">
 				<div class="container">
 					<p class="navbar-text pull-right aminal-bottom-text">Site and Contents &copy; 2015 Aminal Productions Ltd. </p>
