--- a/video_page.html
+++ b/video_page.html
@@ -18,7 +18,7 @@
         <body>
 			<div class="navbar navbar-inverse navbar-fixed-top">
 				<div class="container">
-					<a href="/" class ="navbar-brand"><img class="aminal-logo-top"src="assets/image/IntoKilmainham_logo.png" alt="Small Logo"/></a>
+					<a href="index.html" class ="navbar-brand"><img class="aminal-logo-top" src="assets/image/IntoKilmainham_logo.png" alt="Small Logo"/></a>
 					<button class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
@@ -28,7 +28,7 @@
 						<ul class = "nav navbar-nav navbar-right">
 							<li><a href="index.html">home</a></li>
 							<li><a href="personnel.html">personnel</a></li>
-                            <li class="active"><a href="/">video</a></li>
+                            <li class="active"><a href="video_page.html">video</a></li>
                             <li><a href= "contact.html">contact us </a></li>
 						</ul>
 					</div>
